Fix webkit-overflow-scrolling module

--- a/src/modules/structure/webkit-overflow-scrolling.scss
+++ b/src/modules/structure/webkit-overflow-scrolling.scss
@@ -7,8 +7,7 @@
 			$module   : $module,
 			$modifier : $key
 		) {
-			-webkit-: flex;
-			flex-wrap: wrap;
+			-webkit-overflow-scrolling: $value;
 		}
 	}
 
